--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.6",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.0.14"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
