--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-vue": "^2.0.0-rc.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
@@ -28,6 +29,7 @@
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "vue": "^2.5.2",
