--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sass-loader": "^6.0.7",
+    "serve-static": "^1.13.2",
     "style-loader": "^0.20.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
