--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "sass-loader": "^6.0.7",
     "serve-static": "^1.13.2",
     "style-loader": "^0.20.3",
