--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
