--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "style-loader": "^0.20.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.5.1",
     "vue-swal": "^0.1.0",
     "vuetify": "^1.0.14"
   },
