--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "sass-loader": "^6.0.7",
+    "selenium-standalone": "^6.14.0",
     "serve-static": "^1.13.2",
     "style-loader": "^0.20.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.5.1",
     "vue-swal": "^0.1.0",
-    "vuetify": "^1.0.14"
+    "vuetify": "^1.0.14",
+    "webdriver-manager": "^12.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
