--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
-script: npm run test
+script:
+  - nodemon server.js
+  - npm run test
 sudo: required
 addons:
   chrome: stable
