--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
 script:
-  # - nodemon server.js &
+  - ./run.sh
   - npm run test
 sudo: required
 addons:
