--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
 script:
-  - npm run test
+  - nodemon server.js && npm run test
 addons:
   chrome: stable
-command: bash ./run.sh
