--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+  - nodemon server.js
 script:
-  - nodemon server.js && npm run test
+  - npm run test
 addons:
   chrome: stable
