--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 node_js:
   - "8.5.0"
+sudo: required
 before_script:
   - npm install
   - nodemon server.js &
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+  - "sudo chown root /opt/google/chrome/chrome-sandbox"
+  - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 script:
   - npm run test
 addons:
