--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ node_js:
 sudo: required
 before_script:
   - npm install
-  - node server.js &
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
+  # - node server.js &
 script:
   - npm run test
 addons:
