run only unit tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
 script:
-  - npm run test
+  - npm run unit
 addons:
   chrome: stable
