--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-star-rating": "^1.5.1",
     "vue-swal": "^0.1.0",
     "vuetify": "^1.0.14",
+    "vuex": "^3.0.1",
     "webdriver-manager": "^12.0.6"
   },
   "devDependencies": {
